[package]
name = "tokio-lock-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lock = { version = "3.4.0", optional = true }
futures-lite = "2.5.0"
smol = "2.0.2"
tokio = { version = "1.41.1", features = ["sync"], optional = true }

[features]
default = ["stdout"]
tokio = ["dep:tokio"]
async-lock = ["dep:async-lock"]
stdout = []
